--- a/index.html
+++ b/index.html
@@ -3,34 +3,34 @@
 
 <head>
     <title>Cardinal</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <header>
         <img src="assets/logos/logo-cardinal.png" alt="Cardinal logo" />
+        <h1>Enjoy the proven success</h1>
+        <h1>of our experience.</h1>
     </header>
     <div class="container">
         <div class="section">
-            <h1>Enjoy the proven success of our experience.</h1>
-        </div>
-        <div class="section">
             <div class="info">
-                <div class="bus-int">
+                <div class="info-col">
                     <img src="assets/icons/icon-bi.svg" alt="business intelligence icon" />
                     <h3>Business Intelligence</h3>
-                    <p>We use technology to turn data into knowledge that can help you manage and monitor your buisness, from
+                    <p>We use technology to turn data into knowledge that can help you manage and monitor your business, from
                         anywhere.
                     </p>
                 </div>
-                <div class="app-dev">
+                <div class="info-col">
                     <img src="assets/icons/icon-appdev.svg" alt="app development icon" />
                     <h3>App Development</h3>
                     <p>Our mobile specialists work to create rich, easy-to-use consumer or enterprise expereiences for iOS,
                         Android.
                     </p>
                 </div>
-                <div class="bus-ana">
+                <div class="info-col">
                     <img src="assets/icons/icon-ba.svg" alt="business analysis icon" />
                     <h3>Business Analysis</h3>
                     <p>Great strategy begins with listening. We learn about businesses from the inside out, and then propose
