--- a/index.html
+++ b/index.html
@@ -46,12 +46,24 @@
                     </p>
                 </div>
                 <div class="client-logos">
-                    <img src="assets/logos/logo-fifththird.png" alt="5/3rd logo" />
-                    <img src="assets/logos/logo-chhn.png" alt="Christ Hospital Health Network logo" />
-                    <img src="assets/logos/logo-chs.png" alt="Carolinas HealthCare System logo" />
-                    <img src="assets/logos/logo-skanska.png" alt="Skanska logo" />
-                    <img src="assets/logos/logo-rackroom.png" alt="Rack Room Shoes logo" />
-                    <img src="assets/logos/logo-p&g.png" alt="P&G logo" />
+                    <div class="logo">
+                        <img src="assets/logos/logo-fifththird.png" alt="5/3rd logo" />
+                    </div>
+                    <div class="logo">
+                        <img src="assets/logos/logo-chhn.png" alt="Christ Hospital Health Network logo" />
+                    </div>
+                    <div class="logo">
+                        <img src="assets/logos/logo-chs.png" alt="Carolinas HealthCare System logo" />
+                    </div>
+                    <div class="logo">
+                        <img src="assets/logos/logo-skanska.png" alt="Skanska logo" />
+                    </div>
+                    <div class="logo">
+                        <img src="assets/logos/logo-rackroom.png" alt="Rack Room Shoes logo" />
+                    </div>
+                    <div class="logo">
+                        <img src="assets/logos/logo-p&g.png" alt="P&G logo" />
+                    </div>
                 </div>
             </div>
             <div class="client-big">
